# ved

./: CMakeLists.txt  main.c  sistema.h  ved.c
libs/: menu.h  pablolibs.h  tui.h
